--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,44 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Nunito', sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: #ffffff; */
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.candle-container {
+  margin: auto;
+  width: 70%;
+
+}
+
+.candle-card {
+  background: #e6f1f2; 
+  border-radius: 4px;
+
+}
+
+.card-image {
+  border-radius: 4px;
+}
+
+.card-title {
+  font-size: 40px;
+  padding-top: 1.3rem;
+  margin-bottom: 1rem;
+  font-weight: 800;
+  font-family: 'Merriweather', serif;
+}
+
+.card-info {
+  font-weight: 700;
+  padding-bottom: 1.3rem;
 }
