--- a/client/src/index.css
+++ b/client/src/index.css
@@ -61,6 +61,16 @@ code {
   width: 50%;
 }
 
+.candle-page {
+  margin: auto;
+  margin-top: 2.6em;
+  width: 70%;
+  background: #ffffff; 
+  border-radius: 6px;
+  padding-bottom: 2rem;
+  margin-bottom: 1rem;
+}
+
 .form {
   margin: auto;
   margin-top: 2.6em;
@@ -113,6 +123,23 @@ code {
 .nav-profile {
   float: right;
   margin-right: 1rem;
+}
+
+.review-container {
+  background: white;
+  width: 70%;
+  margin: auto;
+  border-radius: 6px;
+  margin-bottom: 1rem;
+  text-align: left;
+}
+.review-text {
+  margin-left: 1.5rem;
+}
+
+.review-username {
+  font-weight: 700;
+  font-size: 20px;
 }
 
 @media screen and (max-width: 735px){
