--- a/client/src/index.css
+++ b/client/src/index.css
@@ -132,16 +132,33 @@ code {
   border-radius: 6px;
   margin-bottom: 1rem;
   text-align: left;
+  display: inline-block;
+  position: relative;
 }
 .review-text {
   margin-left: 1.5rem;
+  margin-top: 5px; 
 }
 
 .review-username {
   font-weight: 700;
   font-size: 20px;
+  margin-bottom: 0px;
+  display: inline-block;
 }
 
+.review-delete {
+  background: #e6f1f2;
+  display: inline-block;
+  width: 2rem;
+  border-radius: 2px;
+  text-align: center;
+  margin-right: .3rem;
+  font-weight: 900;
+  float: right;
+  top: 0;
+  /* position: absolute; */
+}
 .review-input {
   width: 60%;
   height: 7rem;
