Adds dynamic link to candle page from reviews on user's profile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -171,6 +171,8 @@ code {
   background: #e8e8e8;
   margin: 10px 3px 10px 3px;
   border-radius: 6px;
+  text-decoration: none;
+  color: black;
 }
 
 .profile-review-title {
