--- a/client/src/index.css
+++ b/client/src/index.css
@@ -81,6 +81,16 @@ code {
   padding-bottom: 2rem;
   margin-bottom: 1rem;
 }
+.form-label {
+  float: left;
+  margin-left: 20%;
+
+}
+
+.form-input {
+  float: right;
+  margin-right: 20%;
+}
 
 .form-title {
   font-size: 35px;
@@ -88,6 +98,18 @@ code {
   margin-bottom: 1rem;
   font-weight: 800;
   font-family: 'Merriweather', serif;
+}
+
+.error-container {
+  text-align: center;
+}
+
+.error {
+  text-align: left;
+  color: #cf0015;
+  margin-left: 1.5rem;
+  font-weight: 600;
+  list-style-type: none;
 }
 
 .navbar {
@@ -230,9 +252,11 @@ code {
   height: 7rem;
 }
 
-.review-submit {
+#email {
   margin-bottom: 1rem;
 }
+
+
 
 @media screen and (max-width: 735px){
 
