--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,29 @@ code {
   monospace;
 }
 
+.search-container {
+  text-align: center;
+  width: 70%;
+  margin: auto;
+  font-size: 24px;
+  padding: 20px;
+}
+
+.search-text {
+  width: 50%;
+  float: left;
+}
+
+.search-input-container {
+  width: 50%;
+  float: right;
+}
+
+.search-input {
+  width: 200px;
+  font-size: 24px;
+}
+
 
 .candle-container {
   margin: auto;
@@ -189,6 +212,10 @@ code {
   padding: 1rem 0;
 }
 
+.profile-favorites {
+  margin-bottom: 1rem;
+}
+
 
 
 .profile-favorite-image {
@@ -276,6 +303,17 @@ code {
 
 
 @media screen and (max-width: 735px){
+
+  .search-container {
+    width: 95%;
+    font-size: 18px;
+    padding: 20px 5px;
+  }
+
+  .search-input {
+    font-size: 18px;
+    width: 150px;
+  }
 
   .candle-container{
     width: 95%;
